--- a/app/src/main/res/layout/thumbnail_view.xml
+++ b/app/src/main/res/layout/thumbnail_view.xml
@@ -1,9 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:adjustViewBounds="true"
-    android:scaleType="centerCrop"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="@dimen/image_thumbnail_size"
-    android:layout_width="@dimen/image_thumbnail_size"
-    >
-</ImageView>
+    android:layout_width="@dimen/image_thumbnail_size">
+
+    <ImageView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/img"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"
+        android:layout_height="@dimen/image_thumbnail_size"
+        android:layout_width="@dimen/image_thumbnail_size"/>
+
+
+
+<!--
+    <TextView
+        android:id="@+id/text"
+        android:singleLine="true"
+        android:ellipsize="middle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+-->
+</FrameLayout>
